change pricing in UI for plans

--- a/app/views/mBilling.html
+++ b/app/views/mBilling.html
@@ -21,8 +21,8 @@
 				</p>
 				<h4>Total Price:
 					<select class="form-control" style="width: 200px" #plan>
-						<option value="yes">$150 / Month</option>
-						<option value="no">$1500 / Year</option>
+						<option value="yes">$49 / Month</option>
+						<!--<option value="no">$1500 / Year</option>-->
 					</select>
 				</h4>
 				<a *ngIf="planID === 1" style="color: #C0C0C0;" (click)="setPlan(0)"><span class="fui-cross-circle"></span> Deactivate access</a>
@@ -43,8 +43,8 @@
 				</p>
 				<h4>Total Price:
 					<select class="form-control" style="width: 200px" #plan>
-						<option value="yes">$500 / Month</option>
-						<option value="no">$5000 / Year</option>
+						<option value="yes">$349 / Month</option>
+						<!--<option value="no">$5000 / Year</option>-->
 					</select>
 				</h4>
 				<a *ngIf="planID === 2" style="color: #C0C0C0;" (click)="setPlan(0)"><span class="fui-cross-circle"></span> Deactivate access</a>
