saving to show Shahzil

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -11,7 +11,7 @@
 	<form #f="ngForm">
 		<div class="form-group">
 			<ng-template ngFor let-fld [ngForOf]="fields">
-				<div>
+				<div *ngIf="!fld.seperator">
 					<div class="grid-20 mobile-grid-100 grid-parent">
 						{{fld.title}}<span *ngIf=fld.req class="error" title="required"> *</span>
 					</div>
@@ -59,6 +59,7 @@
 					<div class="clearfix br"></div>
 				</div>
 			</ng-template>
+			<ng-content></ng-content>
 			<div class="clearfix br"></div>
 			<div class="grid-50 mobile-grid-40 grid-parent">
 				<button class="btn btn-block btn-sm btn-blue ghost" (click)="hide($event)">{{ cancelLabel }}</button>
