--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -12,6 +12,7 @@
 			<li class="li-content"><a [routerLink]="['/dashboard']" [routerLinkActive]="['is-active']">Admin Stats</a></li>
 			<li class="li-influencers"><a [routerLink]="['/mAgencies']" [routerLinkActive]="['is-active']">Media Agencies</a></li>
 			<li class="li-perks"><a [routerLink]="['/mTalentAgencies']" [routerLinkActive]="['is-active']">Talent Agencies</a></li>
+			<li class="li-perks"><a [routerLink]="['/mAudiences']" [routerLinkActive]="['is-active']">Audiences</a></li>
 			<li><a [routerLink]="['/mCampaignPerks']" [routerLinkActive]="['is-active']">Inbound</a></li>
 			<li><a [routerLink]="['/mOutboundPerks']" [routerLinkActive]="['is-active']">Perks To Ship</a></li>
 			<li><a [routerLink]="['/checkPayouts']" [routerLinkActive]="['is-active']">Check Payouts</a></li>
