--- a/app/views/createAudience.html
+++ b/app/views/createAudience.html
@@ -114,7 +114,7 @@
 				<br>
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="Enter in emails of Audiences.">Audiences: <img src="/static/img/questionTooltip.png" /></span>
+						<span class="ttip" title="Enter in emails of your audience members.">Members: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<input type="text" name="members" [(ngModel)]="data.members" placeholder="invite@MyInfluencer.com, anotherPerson@y.com" class="form-control">
@@ -166,18 +166,6 @@
 					</div>
 				</div>
 
-			</div>
-			<br>
-			<br>
-			<div class="field-set grid-100 grid-parent">
-				<h2 class="heading" id="giveOut">4. Give out Perks <span>*optional</span></h2>
-				<div class="onoffswitch perks" data-for="toggle-perks">
-					<input type="checkbox" name="perks" class="onoffswitch-checkbox" id="perks">
-					<label class="onoffswitch-label" for="perks">
-						<span class="onoffswitch-inner showhide"></span>
-						<span class="onoffswitch-switch"></span>
-					</label>
-				</div>
 			</div>
 			<br>
 			<br>
