--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -338,8 +338,12 @@
 
 			</div>
 
-			<br>
-			<br>
+			<p>
+					<label style="color:#04be5b;">Amount Due Today:</label> ${{sidebar.totalCharge.toFixed(2)}}
+					<br>
+					<small style="font-size: 10px;"><img src="/static/img/questionTooltip.png"> Note: Upon creation budgets are pro-rated based on the number of days remaining in the month. Your billing method on file will renew your monthly budget on the 1st of every month therafter. Once your campaign is saved you will only be able to edit parameters that won't affect the previously initiated influencers.</small>
+			</p>
+			
 			<div class="grid-50 mobile-grid-40 grid-parent">
 				<a href="javascript:history.back()" class="btn btn-block btn-lg btn-blue ghost">Back</a>
 			</div>
