--- a/app/views/mCampaignPerks.html
+++ b/app/views/mCampaignPerks.html
@@ -28,7 +28,7 @@
 			<td>{{perk.advertiserId}}</td>
 			<td>{{perk.agencyId}}</td>
 			<td>{{perk.budget}}</td>
-			<td>{{perk.infGoal || perk.perks?.count}}</td>
+			<td>{{perk.perks?.count}}</td>
 			<td>{{perk.perks?.name || 'N/A'}}</td>
 			<td>{{perk.perks?.count || 0 }}</td>
 			<td>{{perk.perks?.pendingCount || 0 }}</td>
