add audiences' counts and reach

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -266,6 +266,7 @@
 							</div>
 							<div class="right meta">
 								<p class="i-n" style="text-transform: capitalize;">{{a.name}}</p>
+								<p class="i-s"><span>Influencers: </span>{{ObjectLen(a.members) | fmtNum:'N/A'}} &nbsp;&nbsp;&nbsp; <span>Est Reach: </span>{{a.followers | fmtNum:'N/A'}}</p>
 							</div>
 						</div>
 					</div>
