--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -220,41 +220,63 @@
 						<select multiple="multiple" class="kws form-control multiselect multiselect-info"></select>
 					</div>
 				</div>
-				<br>
-				<div class="form-group">
-					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="Enter in emails of influencers you want to invite to this campaign. By using this filter, all other influencers not matching your email addresses will be disallowed to participate in the campaign.">Invite only: <img src="/static/img/questionTooltip.png" /></span>
-					</div>
-					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input type="text" name="whitelist" [(ngModel)]="data.whitelist" (blur)="!!data.whitelist && updateForecast()" placeholder="invite@MyInfluencer.com, anotherPerson@y.com"
-						 class="form-control">
-					</div>
-				</div>
-
 			</div>
 
 			<br>
 			<br>
-			<div *ngIf="false">
+			<div *ngIf="plan === 3">
 			<!-- this section shows only for enterprise only -->
 			<div class="field-set grid-100 grid-parent head-toggle">
-				<h2 class="heading">2.1. Scheduling <span>*optional</span></h2>
-				<div class="onoffswitch scheduling" data-for="toggle-scheduling">
-					<input type="checkbox" name="scheduling" class="onoffswitch-checkbox" id="scheduling">
-					<label class="onoffswitch-label" for="scheduling">
+				<h2 class="heading">2.1. Whitelist <span>*optional</span></h2>
+				<div class="onoffswitch whitelist" data-for="toggle-whitelist">
+					<input type="checkbox" name="whitelist" class="onoffswitch-checkbox" id="whitelist">
+					<label class="onoffswitch-label" for="whitelist">
 						<span class="onoffswitch-inner showhide"></span>
 						<span class="onoffswitch-switch"></span>
 					</label>
 				</div>
 			</div>
-			<div class="content-toggle toggle-scheduling">
+			<div class="content-toggle toggle-whitelist">
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
-						<span class="ttip" title="Schedule this influencers post by selecting a date on the calendar.">{{infName1}}: <img src="/static/img/questionTooltip.png" /></span>
+						<span class="ttip" title="Enter in emails of influencers you want to invite to this campaign. By using this filter, all other influencers not matching your email addresses will be disallowed to participate in the campaign.">Invite only: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input style="max-width:250px;" type="text" class="form-control dp" id="postDate" placeholder="Post date..." readonly>
+						<input type="text" #wl (change)="addToWhitelist(wl.value); wl.value = ''" placeholder="invite@MyInfluencer.com, anotherPerson@y.com"
+						 class="form-control">
 					</div>
+				</div>
+				<div class="form-group">
+					<div class="grid-80 mobile-grid-80 grid-parent">
+						<span class="ttip" title="Scheduling.">Scheduling: <img src="/static/img/questionTooltip.png"/></span>
+					</div>
+					<div class="grid-20 mobile-grid-20">
+						<div class="onoffswitch whitelist" data-for="toggle-schedule">
+							<input type="checkbox" name="schedule" class="onoffswitch-checkbox" id="schedule">
+							<label class="onoffswitch-label" for="schedule">
+								<span class="onoffswitch-inner"></span>
+								<span class="onoffswitch-switch"></span>
+							</label>
+						</div>
+					</div>
+				</div>
+				<div class="form-group" *ngFor="let key of whitelistKeys">
+					<div class="grid-90 mobile-grid-90 grid-parent">
+						<span class="ttip" title="Schedule this influencers post by selecting a date on the calendar.">{{key}}: <img src="/static/img/questionTooltip.png"></span>
+
+					</div>
+					<div class="grid-10 mobile-grid-10 grid-parent" style="text-align: right">
+						<span class="fui-cross" style="color: rgb(210, 51, 92); font-size: 20px; cursor: pointer" title="Remove" (click)="delFromWhitelist(key);"></span>
+					</div>
+					<div class="grid-100 mobile-grid-100 grid-parent">
+						<div class="grid-50 mobile-grid-100">
+							From: <input type="date" class="form-control dp" [(ngModel)]="data.whitelistSchedule[key].from" useValueAsDate [ngModelOptions]="{standalone: true}">
+						</div>
+						<div class="grid-50 mobile-grid-100">
+							To: <input type="date" class="form-control dp" [(ngModel)]="data.whitelistSchedule[key].to" useValueAsDate [ngModelOptions]="{standalone: true}">
+						</div>
+					</div>
+					<hr>
 				</div>
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
