--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -224,8 +224,6 @@
 
 			<br>
 			<br>
-			<div *ngIf="plan === 3">
-			<!-- this section shows only for enterprise only -->
 			<div class="field-set grid-100 grid-parent head-toggle">
 				<h2 class="heading">2.1. Whitelist <span>*optional</span></h2>
 				<div class="onoffswitch whitelist" data-for="toggle-whitelist">
@@ -247,12 +245,10 @@
 					</div>
 				</div>
 				<div class="form-group" *ngFor="let key of whitelistKeys">
-					<div class="grid-60 mobile-grid-90 grid-parent" style="font-size: 20px;">
-						<span class="ttip" title="Schedule this influencers post by selecting a date on the calendar.">{{key}}: <img src="/static/img/questionTooltip.png"></span>
-
-					</div>
-					<div class="grid-30 mobile-grid-90" style="padding-top: 10px; line-height: 18px">
-						Schedule
+					<div class="grid-60 mobile-grid-90 grid-parent" style="font-size: 20px;">{{key}}</div>
+					<div class="grid-30 mobile-grid-90" style="padding-top: 10px; line-height: 18px" *ngIf="plan !== 3"> </div>
+					<div class="grid-30 mobile-grid-90" style="padding-top: 10px; line-height: 18px" *ngIf="plan === 3">
+						<span class="ttip" title="Schedule this influencers post by selecting a date on the calendar.">Schedule: <img src="/static/img/questionTooltip.png"></span>
 						<div class="onoffswitch whitelist">
 							<input type="checkbox" name="schedule-{{key}}" class="onoffswitch-checkbox" id="schedule-{{key}}" [(ngModel)]="data.whitelistSchedule[key].scheduling">
 							<label class="onoffswitch-label" for="schedule-{{key}}">
@@ -277,8 +273,6 @@
 
 			<br>
 			<br>
-			<!-- end this section for enterprise only-->
-			</div>
 			<div class="field-set grid-100 grid-parent head-toggle">
 				<h2 class="heading">3. Influencer Groups <span>*optional</span></h2>
 				<div class="onoffswitch influencers" data-for="toggle-influencers">
