--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -244,10 +244,10 @@
 					</div>
 				</div>
 				<div class="form-group" *ngFor="let key of whitelistKeys">
-					<div class="grid-60 mobile-grid-90 grid-parent" style="font-size: 16px;">{{key}}</div>
+					<div class="grid-60 mobile-grid-100 grid-parent" style="font-size: 16px;">{{key}}</div>
 					<div class="grid-30 mobile-grid-90" style="padding-top: 10px; line-height: 18px" *ngIf="plan !== 3"> </div>
 					<div class="grid-30 mobile-grid-90" style="padding-top: 10px; line-height: 18px" *ngIf="plan === 3">
-						<span class="ttip" title="Schedule this influencers post by selecting a date on the calendar.">Schedule: <img src="/static/img/questionTooltip.png"></span>
+						<span class="ttip" title="Schedule this influencers post by selecting a date on the calendar, starting at 12AM UTC.">Schedule: <img src="/static/img/questionTooltip.png"></span>
 						<div class="onoffswitch whitelist">
 							<input type="checkbox" name="schedule-{{key}}" class="onoffswitch-checkbox" id="schedule-{{key}}" [(ngModel)]="data.whitelistSchedule[key].scheduling">
 							<label class="onoffswitch-label" for="schedule-{{key}}">
@@ -260,12 +260,13 @@
 						<span class="fui-cross" style="color: rgb(210, 51, 92); font-size: 20px; cursor: pointer" title="Remove" (click)="delFromWhitelist(key);"></span>
 					</div>
 					<div class="grid-100 mobile-grid-100 grid-parent" *ngIf="data.whitelistSchedule[key].scheduling">
-						<div class="grid-50 mobile-grid-100">
+						<div class="grid-40 mobile-grid-100">
 							From: <input type="date" class="form-control dp" [(ngModel)]="data.whitelistSchedule[key].from" useValueAsDate [ngModelOptions]="{standalone: true}">
 						</div>
-						<div class="grid-50 mobile-grid-100">
+						<div class="grid-40 mobile-grid-100">
 							To: <input type="date" class="form-control dp" [(ngModel)]="data.whitelistSchedule[key].to" useValueAsDate [ngModelOptions]="{standalone: true}">
 						</div>
+						<div class="grid-20" style="padding-top: 22px; font-weight: bold;">12AM UTC</div>
 					</div>
 				</div>
 			</div>
