--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -137,7 +137,7 @@
 	<div class="infColumn" #infComp>
 
 		<div style="font-size: 12px;" *ngFor="let inf of cmp.submitted">
-			<img height="15" [src]="inf.image"> <a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | <button class="btn btn-x btn-danger" style="padding:3px;" title="MSG Changes to Influencer">MSG Changes</button> | <button class="btn btn-x btn-success" style="padding:3px;" title="Approve Media" (click)="approveMedia(inf)">Approve</button> | <a style="font-size: 12px;" target="_blank" [href]="inf.postUrl">View Media</a>
+			<img height="15" [src]="inf.image"> <a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | <button class="btn btn-x btn-danger" style="padding:3px;" title="MSG Changes to Influencer">MSG Changes</button> | <button class="btn btn-x btn-success" style="padding:3px;" title="Approve Media" (click)="approveMedia(cmp.id, inf.id)">Approve</button> | <a style="font-size: 12px;" target="_blank" [href]="inf.postUrl">View Media</a>
 		</div>
 	</div>
 	<!--inf column end-->
