--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -135,10 +135,14 @@
 <div class="grid-50 mobile-grid-100" align="left">
 	<h6 style="margin-bottom: 8px;">Pre-Approve Media:</h6>
 	<div class="infColumn" #infComp>
-
-		<div style="font-size: 12px;" *ngFor="let inf of cmp.submitted">
-			<img height="15" [src]="inf.image"> <a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> | <button class="btn btn-x btn-danger" style="padding:3px;" title="MSG Changes to Influencer">MSG Changes</button> | <button class="btn btn-x btn-success" style="padding:3px;" title="Approve Media" (click)="approveMedia(cmp.id, inf.id)">Approve</button> | <a style="font-size: 12px;" target="_blank" [href]="inf.postUrl">View Media</a>
-		</div>
+		<ng-template ngFor let-inf [ngForOf]="cmp.submitted">
+			<div style="font-size: 12px;" *ngIf="!!inf.submission.approved">
+				<img height="15" [src]="inf.image"> <a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> |
+				<a class="btn btn-x btn-danger" style="padding:3px;" title="MSG Changes to Influencer" target="_blank" href="mailto:{{inf.emailAddress}}?cc=karlie@swayops.com&subject=MSG Change">MSG Changes</a> |
+				<button class="btn btn-x btn-success" style="padding:3px;" title="Approve Media" (click)="approveMedia(cmp.id, inf.id)">Approve</button> |
+				<a style="font-size: 12px;" target="_blank" [href]="inf.postUrl">View Media</a>
+			</div>
+		</ng-template>
 	</div>
 	<!--inf column end-->
 	<hr>
