--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -140,7 +140,7 @@
 				<img height="15" [src]="inf.image"> <a [href]="inf.profileUrl" target="_blank">{{inf.name}}</a> |
 				<a class="btn btn-x btn-danger" style="padding:3px;" title="MSG Changes to Influencer" target="_blank" href="mailto:{{inf.emailAddress}}?cc=karlie@swayops.com&subject=MSG Change">MSG Changes</a> |
 				<button class="btn btn-x btn-success" style="padding:3px;" title="Approve Media" (click)="approveMedia(cmp.id, inf.id)">Approve</button> |
-				<a style="font-size: 12px;" target="_blank" [href]="inf.postUrl">View Media</a>
+				<a style="font-size: 12px;" target="_blank" (click)="viewMedia.show(inf.submission.content);">View Media</a>
 			</div>
 		</ng-template>
 	</div>
@@ -183,4 +183,11 @@
 
 <modal title="Remove Influencer?" #removeInf [buttons]=delInfButtons>
 	Are you sure you want to remove <em><strong>{{removeInf.data?.name}}</strong></em>?
+</modal>
+<modal title="View Media" #viewMedia>
+	<ng-template ngFor let-url [ngForOf]="viewMedia.data">
+		<div class="grid-50 grid-mobile-100">
+			<a [href]="url" target="_blank"><img [src]="url" style="max-width: 100%"></a>
+		</div>
+	</ng-template>
 </modal>
