change name of content feed in left nav

--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -39,7 +39,7 @@
 			<ul>
 				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Dashboard</a></li>
 				<li class="li-campaign"><a [routerLink]="['/mCampaigns', user.id]" [routerLinkActive]="['is-active']">My Campaigns</a></li>
-				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]" [routerLinkActive]="['is-active']">My Content</a></li>
+				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]" [routerLinkActive]="['is-active']">Post Feed</a></li>
 			</ul>
 		</div>
 	</div>
