--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -80,8 +80,8 @@
 			<dd>{{cmpStats(cmp, 'likes') | fmtNum }}</dd>
 		</dl>
 		<dl class="palette palette-midnight-blue" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
-			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Link Clicks</dt>
-			<dd>{{cmpStats(cmp, 'clicks') | fmtNum }}</dd>
+			<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Clicks / Uniques</dt>
+			<dd>{{cmpStats(cmp, 'clicks') | fmtNum }} / {{cmpStats(cmp, 'uniques') | fmtNum }}</dd>
 		</dl>
 	</div>
 	<div class="pallete-item">
