oops forgot reporting page

--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -93,8 +93,8 @@
 	<p>{{ lastMonth.total.likes | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
-	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Clicks</div>
-	<p>{{ lastMonth.total.clicks | fmtNum:'N/A' }}</p>
+	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Clicks / Uniques</div>
+	<p>{{ lastMonth.total.clicks | fmtNum:'N/A' }} / {{ lastMonth.total.uniques | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Comments</div>
