--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -221,9 +221,6 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="plan===3">
-
-			</div>
 			<br>
 			<br>
 			<div class="field-set grid-100 grid-parent head-toggle">
@@ -325,7 +322,7 @@
 					</div>
 					<div class="form-group">
 						<div class="grid-20 mobile-grid-100 grid-parent">
-							<span class="ttip" title="Filter by the number of engagements">Engagements: <img src="/static/img/questionTooltip.png" /></span>
+							<span class="ttip" title="Filter by the number of average engagements">Engagements: <img src="/static/img/questionTooltip.png" /></span>
 						</div>
 						<div class="grid-80 mobile-grid-100 grid-parent">
 							<input type="number" [(ngModel)]="data.engTarget.from" placeholder="min" class="form-control minmax" min="0" name="minEng" (change)="updateSidebar('filter')"> -
